# headlessdetection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bench/: ANALYSIS.md  Dockerfile.headful  Dockerfile.headless  Dockerfile.headless-shell  README.md  __main__.py  benchmark.py  config.py  docker-compose.yml  entrypoint.headful.sh  host_stats.py  monitor.py  report.py  run.py  runner.py  urls.txt  urls_10.txt
core/: __init__.py  analysis.py  browser.py  config.py  storage.py
core/tls/: cert.py  fingerprint.py
data/: requests.db-shm  requests.db-wal  top1000trancourls.txt
detector/: Dockerfile  README.md  cli.py  docker-compose.yml  entrypoint.sh  server.py
detector/data/: detections.db-shm  detections.db-wal
docs/: _config.yml  index.md
docs/benchmarks/: index.md  methodology.md  resource-overhead.md
docs/data/: index.md  results-chrome.md  results-chromium.md  results-headless-shell-tables.md  results-headless-shell.md
docs/detection/: index.md  negative-results.md  rendering-stress.md  scrollbar-width.md  user-agent.md  window-chrome.md
docs/headless-shell/: index.md  lazy-loading.md
experiments/: __main__.py  config.py  report.py  report_server_signals.py  runner.py  runner_server_signals.py
experiments/investigations/: __init__.py  ad_cascade.py  browsers.py  check_ect.py  chrome.py  chrome_deep.py  compositor.py  (+8 more)
probes/: server.py  tracking.py
rendering_comparison/: __main__.py  collector.py  comparator.py  config.py  parser.py  report.py
scripts/: capture_shell_diffs.py  compute_extremes.py  find_shell_divergence.py  run_server.py
(+19 files in other folders)
